v1.1.0/modules/schema/pages/class/RegisteredDistributedResource.adoc
= `RegisteredDistributedResource`
:toclevels: 4


+++A registered resource that represents a distributed energy resource, such as a micro-generator, fuel cell, photo-voltaic energy source, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:RegisteredDistributedResource`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/RegisteredResource.adoc[`RegisteredResource`]
**** *`RegisteredDistributedResource`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ResourcePerformanceRatings,`ResourcePerformanceRatings`>>
//| [[slots_table.ResourcePerformanceRatings]]<<ResourcePerformanceRatings,`ResourcePerformanceRatings`>>
| 0..* +
xref::class/ResourcePerformanceRating.adoc[`ResourcePerformanceRating`]
| _n/a_
| _n/a_

| <<ResponseMethods,`ResponseMethods`>>
//| [[slots_table.ResponseMethods]]<<ResponseMethods,`ResponseMethods`>>
| 0..* +
xref::class/ResponseMethod.adoc[`ResponseMethod`]
| _n/a_
| _n/a_

| <<distributedResourceType,`distributedResourceType`>>
//| [[slots_table.distributedResourceType]]<<distributedResourceType,`distributedResourceType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The type of resource. Examples include: fuel cell, flywheel, photovoltaic, micro-turbine, CHP (combined heat power), V2G...+++
| _n/a_

| <<ACAFlag,`ACAFlag`>>
//| [[slots_table.ACAFlag]]<<ACAFlag,`ACAFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that this resource is associated with an Adjacent Control Area.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ASSPOptimizationFlag,`ASSPOptimizationFlag`>>
//| [[slots_table.ASSPOptimizationFlag]]<<ASSPOptimizationFlag,`ASSPOptimizationFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that the resource participates in the optimization process by default.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<AdjacentCASet,`AdjacentCASet`>>
//| [[slots_table.AdjacentCASet]]<<AdjacentCASet,`AdjacentCASet`>>
| 0..1 +
xref::class/AdjacentCASet.adoc[`AdjacentCASet`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<AggregateNode,`AggregateNode`>>
//| [[slots_table.AggregateNode]]<<AggregateNode,`AggregateNode`>>
| 0..1 +
xref::class/AggregateNode.adoc[`AggregateNode`]
| +++An AggregateNode may be associated with up to many RegisteredResources.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<AllocationResultValues,`AllocationResultValues`>>
//| [[slots_table.AllocationResultValues]]<<AllocationResultValues,`AllocationResultValues`>>
| 0..* +
xref::class/AllocationResultValues.adoc[`AllocationResultValues`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<Commitments,`Commitments`>>
//| [[slots_table.Commitments]]<<Commitments,`Commitments`>>
| 0..* +
xref::class/Commitments.adoc[`Commitments`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ContractDistributionFactor,`ContractDistributionFactor`>>
//| [[slots_table.ContractDistributionFactor]]<<ContractDistributionFactor,`ContractDistributionFactor`>>
| 0..* +
xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ControlAreaDesignation,`ControlAreaDesignation`>>
//| [[slots_table.ControlAreaDesignation]]<<ControlAreaDesignation,`ControlAreaDesignation`>>
| 0..* +
xref::class/ControlAreaDesignation.adoc[`ControlAreaDesignation`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<DefaultBid,`DefaultBid`>>
//| [[slots_table.DefaultBid]]<<DefaultBid,`DefaultBid`>>
| 0..1 +
xref::class/DefaultBid.adoc[`DefaultBid`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<DispatchInstReply,`DispatchInstReply`>>
//| [[slots_table.DispatchInstReply]]<<DispatchInstReply,`DispatchInstReply`>>
| 0..* +
xref::class/DispatchInstReply.adoc[`DispatchInstReply`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<Domain,`Domain`>>
//| [[slots_table.Domain]]<<Domain,`Domain`>>
| 0..* +
xref::class/Domain.adoc[`Domain`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<DopInstruction,`DopInstruction`>>
//| [[slots_table.DopInstruction]]<<DopInstruction,`DopInstruction`>>
| 0..* +
xref::class/DopInstruction.adoc[`DopInstruction`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<DotInstruction,`DotInstruction`>>
//| [[slots_table.DotInstruction]]<<DotInstruction,`DotInstruction`>>
| 0..* +
xref::class/DotInstruction.adoc[`DotInstruction`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ECAFlag,`ECAFlag`>>
//| [[slots_table.ECAFlag]]<<ECAFlag,`ECAFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that this resource is associated with an Embedded Control area.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<EnergyMarkets,`EnergyMarkets`>>
//| [[slots_table.EnergyMarkets]]<<EnergyMarkets,`EnergyMarkets`>>
| 0..* +
xref::class/EnergyMarket.adoc[`EnergyMarket`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ExPostResourceResults,`ExPostResourceResults`>>
//| [[slots_table.ExPostResourceResults]]<<ExPostResourceResults,`ExPostResourceResults`>>
| 0..* +
xref::class/ExPostResourceResults.adoc[`ExPostResourceResults`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ExpectedEnergyValues,`ExpectedEnergyValues`>>
//| [[slots_table.ExpectedEnergyValues]]<<ExpectedEnergyValues,`ExpectedEnergyValues`>>
| 0..* +
xref::class/ExpectedEnergyValues.adoc[`ExpectedEnergyValues`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ForbiddenRegion,`ForbiddenRegion`>>
//| [[slots_table.ForbiddenRegion]]<<ForbiddenRegion,`ForbiddenRegion`>>
| 0..* +
xref::class/ForbiddenRegion.adoc[`ForbiddenRegion`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<FormerReference,`FormerReference`>>
//| [[slots_table.FormerReference]]<<FormerReference,`FormerReference`>>
| 0..* +
xref::class/FormerReference.adoc[`FormerReference`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<HostControlArea,`HostControlArea`>>
//| [[slots_table.HostControlArea]]<<HostControlArea,`HostControlArea`>>
| 0..1 +
xref::class/HostControlArea.adoc[`HostControlArea`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<Instructions,`Instructions`>>
//| [[slots_table.Instructions]]<<Instructions,`Instructions`>>
| 0..* +
xref::class/Instructions.adoc[`Instructions`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<InterTie,`InterTie`>>
//| [[slots_table.InterTie]]<<InterTie,`InterTie`>>
| 0..* +
xref::class/SchedulingPoint.adoc[`SchedulingPoint`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<IntermittentResourceEligibility,`IntermittentResourceEligibility`>>
//| [[slots_table.IntermittentResourceEligibility]]<<IntermittentResourceEligibility,`IntermittentResourceEligibility`>>
| 0..* +
xref::class/IntermittentResourceEligibility.adoc[`IntermittentResourceEligibility`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<LMPMFlag,`LMPMFlag`>>
//| [[slots_table.LMPMFlag]]<<LMPMFlag,`LMPMFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++LMPM flag: indicates whether the resource is subject to the LMPM test (Yes/No).+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<LoadFollowingInst,`LoadFollowingInst`>>
//| [[slots_table.LoadFollowingInst]]<<LoadFollowingInst,`LoadFollowingInst`>>
| 0..* +
xref::class/LoadFollowingInst.adoc[`LoadFollowingInst`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<LoadFollowingOperatorInput,`LoadFollowingOperatorInput`>>
//| [[slots_table.LoadFollowingOperatorInput]]<<LoadFollowingOperatorInput,`LoadFollowingOperatorInput`>>
| 0..* +
xref::class/LoadFollowingOperatorInput.adoc[`LoadFollowingOperatorInput`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<MPMResourceStatus,`MPMResourceStatus`>>
//| [[slots_table.MPMResourceStatus]]<<MPMResourceStatus,`MPMResourceStatus`>>
| 0..* +
xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<MPMTestThreshold,`MPMTestThreshold`>>
//| [[slots_table.MPMTestThreshold]]<<MPMTestThreshold,`MPMTestThreshold`>>
| 0..* +
xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<MarketObjectStatus,`MarketObjectStatus`>>
//| [[slots_table.MarketObjectStatus]]<<MarketObjectStatus,`MarketObjectStatus`>>
| 0..* +
xref::class/MarketObjectStatus.adoc[`MarketObjectStatus`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<MarketParticipant,`MarketParticipant`>>
//| [[slots_table.MarketParticipant]]<<MarketParticipant,`MarketParticipant`>>
| 0..1 +
xref::class/MarketParticipant.adoc[`MarketParticipant`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<MktConnectivityNode,`MktConnectivityNode`>>
//| [[slots_table.MktConnectivityNode]]<<MktConnectivityNode,`MktConnectivityNode`>>
| 0..1 +
xref::class/MktConnectivityNode.adoc[`MktConnectivityNode`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<OrgResOwnership,`OrgResOwnership`>>
//| [[slots_table.OrgResOwnership]]<<OrgResOwnership,`OrgResOwnership`>>
| 0..* +
xref::class/OrgResOwnership.adoc[`OrgResOwnership`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<Pnode,`Pnode`>>
//| [[slots_table.Pnode]]<<Pnode,`Pnode`>>
| 0..1 +
xref::class/Pnode.adoc[`Pnode`]
| +++A registered resource injects power at one or more connectivity nodes related to a pnode+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<RMROperatorInput,`RMROperatorInput`>>
//| [[slots_table.RMROperatorInput]]<<RMROperatorInput,`RMROperatorInput`>>
| 0..* +
xref::class/RMROperatorInput.adoc[`RMROperatorInput`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<RUCAwardInstruction,`RUCAwardInstruction`>>
//| [[slots_table.RUCAwardInstruction]]<<RUCAwardInstruction,`RUCAwardInstruction`>>
| 0..* +
xref::class/RUCAwardInstruction.adoc[`RUCAwardInstruction`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<RampRateCurve,`RampRateCurve`>>
//| [[slots_table.RampRateCurve]]<<RampRateCurve,`RampRateCurve`>>
| 0..* +
xref::class/RampRateCurve.adoc[`RampRateCurve`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<Reason,`Reason`>>
//| [[slots_table.Reason]]<<Reason,`Reason`>>
| 0..* +
xref::class/Reason.adoc[`Reason`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceAncillaryServiceQualification,`ResourceAncillaryServiceQualification`>>
//| [[slots_table.ResourceAncillaryServiceQualification]]<<ResourceAncillaryServiceQualification,`ResourceAncillaryServiceQualification`>>
| 0..* +
xref::class/ResourceCertification.adoc[`ResourceCertification`]
| +++RegisteredResources are qualified for resource ancillary service types (which include market product types as well as other...+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceAwardInstruction,`ResourceAwardInstruction`>>
//| [[slots_table.ResourceAwardInstruction]]<<ResourceAwardInstruction,`ResourceAwardInstruction`>>
| 0..* +
xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceCapacity,`ResourceCapacity`>>
//| [[slots_table.ResourceCapacity]]<<ResourceCapacity,`ResourceCapacity`>>
| 0..* +
xref::class/ResourceCapacity.adoc[`ResourceCapacity`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceCertification,`ResourceCertification`>>
//| [[slots_table.ResourceCertification]]<<ResourceCertification,`ResourceCertification`>>
| 0..* +
xref::class/ResourceCertification.adoc[`ResourceCertification`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceDispatchResults,`ResourceDispatchResults`>>
//| [[slots_table.ResourceDispatchResults]]<<ResourceDispatchResults,`ResourceDispatchResults`>>
| 0..* +
xref::class/ResourceDispatchResults.adoc[`ResourceDispatchResults`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceGroups,`ResourceGroups`>>
//| [[slots_table.ResourceGroups]]<<ResourceGroups,`ResourceGroups`>>
| 0..* +
xref::class/ResourceGroup.adoc[`ResourceGroup`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceLoadFollowingInst,`ResourceLoadFollowingInst`>>
//| [[slots_table.ResourceLoadFollowingInst]]<<ResourceLoadFollowingInst,`ResourceLoadFollowingInst`>>
| 0..* +
xref::class/ResourceLoadFollowingInst.adoc[`ResourceLoadFollowingInst`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<ResourceVerifiableCosts,`ResourceVerifiableCosts`>>
//| [[slots_table.ResourceVerifiableCosts]]<<ResourceVerifiableCosts,`ResourceVerifiableCosts`>>
| 0..1 +
xref::class/ResourceVerifiableCosts.adoc[`ResourceVerifiableCosts`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<SMPMFlag,`SMPMFlag`>>
//| [[slots_table.SMPMFlag]]<<SMPMFlag,`SMPMFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++SMPM flag: indicates whether the resource is subject to the SMPM test (Yes/No).+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<SubControlArea,`SubControlArea`>>
//| [[slots_table.SubControlArea]]<<SubControlArea,`SubControlArea`>>
| 0..* +
xref::class/SubControlArea.adoc[`SubControlArea`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<SubstitutionResourceList,`SubstitutionResourceList`>>
//| [[slots_table.SubstitutionResourceList]]<<SubstitutionResourceList,`SubstitutionResourceList`>>
| 0..* +
xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<TimeSeries,`TimeSeries`>>
//| [[slots_table.TimeSeries]]<<TimeSeries,`TimeSeries`>>
| 0..* +
xref::class/TimeSeries.adoc[`TimeSeries`]
| _n/a_
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<commercialOpDate,`commercialOpDate`>>
//| [[slots_table.commercialOpDate]]<<commercialOpDate,`commercialOpDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Resource Commercial Operation Date.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<contingencyAvailFlag,`contingencyAvailFlag`>>
//| [[slots_table.contingencyAvailFlag]]<<contingencyAvailFlag,`contingencyAvailFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Contingent operating reserve availiability (Yes/No).  Resource is availiable to participate with capacity in contingency dispatch.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<dispatchable,`dispatchable`>>
//| [[slots_table.dispatchable]]<<dispatchable,`dispatchable`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Dispatchable: indicates whether the resource is dispatchable. This implies that the resource intends to submit Energy...+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<flexibleOfferFlag,`flexibleOfferFlag`>>
//| [[slots_table.flexibleOfferFlag]]<<flexibleOfferFlag,`flexibleOfferFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flexible offer flag (Y/N).+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<hourlyPredispatch,`hourlyPredispatch`>>
//| [[slots_table.hourlyPredispatch]]<<hourlyPredispatch,`hourlyPredispatch`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indicates need to dispatch before the start of the operating hour. Only relevant in Real-Time Market. Applies to generation,...+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<isAggregatedRes,`isAggregatedRes`>>
//| [[slots_table.isAggregatedRes]]<<isAggregatedRes,`isAggregatedRes`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++A flag to indicate if a resource is an aggregated resource.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<lastModified,`lastModified`>>
//| [[slots_table.lastModified]]<<lastModified,`lastModified`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Indication of the last time this item was modified/versioned.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<marketParticipationFlag,`marketParticipationFlag`>>
//| [[slots_table.marketParticipationFlag]]<<marketParticipationFlag,`marketParticipationFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Market Participation flag: indicates whether the resource participate in the market.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<maxBaseSelfSchedQty ,`maxBaseSelfSchedQty `>>
//| [[slots_table.maxBaseSelfSchedQty ]]<<maxBaseSelfSchedQty ,`maxBaseSelfSchedQty `>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum base self schedule quantity.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<maxOnTime,`maxOnTime`>>
//| [[slots_table.maxOnTime]]<<maxOnTime,`maxOnTime`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum on time after start up.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<minDispatchTime,`minDispatchTime`>>
//| [[slots_table.minDispatchTime]]<<minDispatchTime,`minDispatchTime`>>
| 0..1 +
xref::class/Hours.adoc[`Hours`]
| +++Minimum number of consecutive hours a resource shall be dispatched if bid is accepted.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<minOffTime,`minOffTime`>>
//| [[slots_table.minOffTime]]<<minOffTime,`minOffTime`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum off time after shut down.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<minOnTime,`minOnTime`>>
//| [[slots_table.minOnTime]]<<minOnTime,`minOnTime`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum on time after start up.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<mustOfferFlag,`mustOfferFlag`>>
//| [[slots_table.mustOfferFlag]]<<mustOfferFlag,`mustOfferFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Must offer flag: indicates whether the unit is subject to the must offer provisions (Y/N).+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<nonMarket,`nonMarket`>>
//| [[slots_table.nonMarket]]<<nonMarket,`nonMarket`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate that the Resource is not participating in the Market Operations.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<pointOfDeliveryFlag,`pointOfDeliveryFlag`>>
//| [[slots_table.pointOfDeliveryFlag]]<<pointOfDeliveryFlag,`pointOfDeliveryFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that the registered resource is a Point of Delivery (YES) resource which implies there is a POD Loss Factor.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<priceSetFlagDA,`priceSetFlagDA`>>
//| [[slots_table.priceSetFlagDA]]<<priceSetFlagDA,`priceSetFlagDA`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Price setting flag: indicates whether a resource is capable of setting the Market Clearing Price (Y) for the DA market, and...+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<priceSetFlagRT,`priceSetFlagRT`>>
//| [[slots_table.priceSetFlagRT]]<<priceSetFlagRT,`priceSetFlagRT`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Price setting flag: indicates whether a resource is capable of setting the Market Clearing Price (Y) for the RT market, and...+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<registrationStatus,`registrationStatus`>>
//| [[slots_table.registrationStatus]]<<registrationStatus,`registrationStatus`>>
| 0..1 +
xref::enumeration/ResourceRegistrationStatus.adoc[`ResourceRegistrationStatus`]
| +++Registration Status of resource - Active, Mothballed, Planned, or Decommissioned.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<resourceAdequacyFlag,`resourceAdequacyFlag`>>
//| [[slots_table.resourceAdequacyFlag]]<<resourceAdequacyFlag,`resourceAdequacyFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indication that this resource participates in the resource adequacy function.+++
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| <<AssetDatasheet,`AssetDatasheet`>>
//| [[slots_table.AssetDatasheet]]<<AssetDatasheet,`AssetDatasheet`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Clearances,`Clearances`>>
//| [[slots_table.Clearances]]<<Clearances,`Clearances`>>
| 0..* +
xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ConfigurationEvent,`ConfigurationEvent`>>
//| [[slots_table.ConfigurationEvent]]<<ConfigurationEvent,`ConfigurationEvent`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Controls,`Controls`>>
//| [[slots_table.Controls]]<<Controls,`Controls`>>
| 0..* +
xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<GenericAction,`GenericAction`>>
//| [[slots_table.GenericAction]]<<GenericAction,`GenericAction`>>
| 0..* +
xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperatingShare,`OperatingShare`>>
//| [[slots_table.OperatingShare]]<<OperatingShare,`OperatingShare`>>
| 0..* +
xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperationalTags,`OperationalTags`>>
//| [[slots_table.OperationalTags]]<<OperationalTags,`OperationalTags`>>
| 0..* +
xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSREvents,`PSREvents`>>
//| [[slots_table.PSREvents]]<<PSREvents,`PSREvents`>>
| 0..* +
xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSRType,`PSRType`>>
//| [[slots_table.PSRType]]<<PSRType,`PSRType`>>
| 0..1 +
xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ReportingGroup,`ReportingGroup`>>
//| [[slots_table.ReportingGroup]]<<ReportingGroup,`ReportingGroup`>>
| 0..* +
xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<VerificationAction,`VerificationAction`>>
//| [[slots_table.VerificationAction]]<<VerificationAction,`VerificationAction`>>
| 0..* +
xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ACAFlag]
=== `ACAFlag`
+++Indication that this resource is associated with an Adjacent Control Area.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ACAFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ACAFlag,&#10548;>>
--
////


//[discrete]
[#AdjacentCASet]
=== `AdjacentCASet`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.AdjacentCASet`
| Cardinality
| 0..1
| Type
| xref::class/AdjacentCASet.adoc[`AdjacentCASet`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.AdjacentCASet,&#10548;>>
--
////


//[discrete]
[#AggregateNode]
=== `AggregateNode`
+++An AggregateNode may be associated with up to many RegisteredResources.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.AggregateNode`
| Cardinality
| 0..1
| Type
| xref::class/AggregateNode.adoc[`AggregateNode`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.AggregateNode,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AllocationResultValues]
=== `AllocationResultValues`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.AllocationResultValues`
| Cardinality
| 0..*
| Type
| xref::class/AllocationResultValues.adoc[`AllocationResultValues`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.AllocationResultValues,&#10548;>>
--
////


//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.AssetDatasheet,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#ASSPOptimizationFlag]
=== `ASSPOptimizationFlag`
+++Indication that the resource participates in the optimization process by default.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ASSPOptimizationFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ASSPOptimizationFlag,&#10548;>>
--
////


//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Clearances,&#10548;>>
--
////


//[discrete]
[#commercialOpDate]
=== `commercialOpDate`
+++Resource Commercial Operation Date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.commercialOpDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.commercialOpDate,&#10548;>>
--
////


//[discrete]
[#Commitments]
=== `Commitments`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.Commitments`
| Cardinality
| 0..*
| Type
| xref::class/Commitments.adoc[`Commitments`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.Commitments,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvent,&#10548;>>
--
////


//[discrete]
[#contingencyAvailFlag]
=== `contingencyAvailFlag`
+++Contingent operating reserve availiability (Yes/No).  Resource is availiable to participate with capacity in contingency dispatch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.contingencyAvailFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.contingencyAvailFlag,&#10548;>>
--
////


//[discrete]
[#ContractDistributionFactor]
=== `ContractDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ContractDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ContractDistributionFactor,&#10548;>>
--
////


//[discrete]
[#ControlAreaDesignation]
=== `ControlAreaDesignation`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ControlAreaDesignation`
| Cardinality
| 0..*
| Type
| xref::class/ControlAreaDesignation.adoc[`ControlAreaDesignation`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ControlAreaDesignation,&#10548;>>
--
////


//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Controls,&#10548;>>
--
////


//[discrete]
[#DefaultBid]
=== `DefaultBid`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.DefaultBid`
| Cardinality
| 0..1
| Type
| xref::class/DefaultBid.adoc[`DefaultBid`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.DefaultBid,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dispatchable]
=== `dispatchable`
+++Dispatchable: indicates whether the resource is dispatchable. This implies that the resource intends to submit Energy bids/offers or Ancillary Services bids/offers, or self-provided schedules.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.dispatchable`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.dispatchable,&#10548;>>
--
////


//[discrete]
[#DispatchInstReply]
=== `DispatchInstReply`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.DispatchInstReply`
| Cardinality
| 0..*
| Type
| xref::class/DispatchInstReply.adoc[`DispatchInstReply`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.DispatchInstReply,&#10548;>>
--
////


//[discrete]
[#distributedResourceType]
=== `distributedResourceType`
+++The type of resource. Examples include: fuel cell, flywheel, photovoltaic, micro-turbine, CHP (combined heat power), V2G (vehicle to grid), DES (distributed energy storage), and others.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredDistributedResource.distributedResourceType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.distributedResourceType,&#10548;>>
--
////


//[discrete]
[#Domain]
=== `Domain`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.Domain`
| Cardinality
| 0..*
| Type
| xref::class/Domain.adoc[`Domain`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.Domain,&#10548;>>
--
////


//[discrete]
[#DopInstruction]
=== `DopInstruction`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.DopInstruction`
| Cardinality
| 0..*
| Type
| xref::class/DopInstruction.adoc[`DopInstruction`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.DopInstruction,&#10548;>>
--
////


//[discrete]
[#DotInstruction]
=== `DotInstruction`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.DotInstruction`
| Cardinality
| 0..*
| Type
| xref::class/DotInstruction.adoc[`DotInstruction`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.DotInstruction,&#10548;>>
--
////


//[discrete]
[#ECAFlag]
=== `ECAFlag`
+++Indication that this resource is associated with an Embedded Control area.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ECAFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ECAFlag,&#10548;>>
--
////


//[discrete]
[#EnergyMarkets]
=== `EnergyMarkets`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.EnergyMarkets`
| Cardinality
| 0..*
| Type
| xref::class/EnergyMarket.adoc[`EnergyMarket`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.EnergyMarkets,&#10548;>>
--
////


//[discrete]
[#ExpectedEnergyValues]
=== `ExpectedEnergyValues`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ExpectedEnergyValues`
| Cardinality
| 0..*
| Type
| xref::class/ExpectedEnergyValues.adoc[`ExpectedEnergyValues`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ExpectedEnergyValues,&#10548;>>
--
////


//[discrete]
[#ExPostResourceResults]
=== `ExPostResourceResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ExPostResourceResults`
| Cardinality
| 0..*
| Type
| xref::class/ExPostResourceResults.adoc[`ExPostResourceResults`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ExPostResourceResults,&#10548;>>
--
////


//[discrete]
[#flexibleOfferFlag]
=== `flexibleOfferFlag`
+++Flexible offer flag (Y/N).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.flexibleOfferFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.flexibleOfferFlag,&#10548;>>
--
////


//[discrete]
[#ForbiddenRegion]
=== `ForbiddenRegion`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ForbiddenRegion`
| Cardinality
| 0..*
| Type
| xref::class/ForbiddenRegion.adoc[`ForbiddenRegion`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ForbiddenRegion,&#10548;>>
--
////


//[discrete]
[#FormerReference]
=== `FormerReference`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.FormerReference`
| Cardinality
| 0..*
| Type
| xref::class/FormerReference.adoc[`FormerReference`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.FormerReference,&#10548;>>
--
////


//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.GenericAction,&#10548;>>
--
////


//[discrete]
[#HostControlArea]
=== `HostControlArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.HostControlArea`
| Cardinality
| 0..1
| Type
| xref::class/HostControlArea.adoc[`HostControlArea`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.HostControlArea,&#10548;>>
--
////


//[discrete]
[#hourlyPredispatch]
=== `hourlyPredispatch`
+++Indicates need to dispatch before the start of the operating hour. Only relevant in Real-Time Market. Applies to generation, intertie and participating load resource. Value (Y/N).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.hourlyPredispatch`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.hourlyPredispatch,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Instructions]
=== `Instructions`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.Instructions`
| Cardinality
| 0..*
| Type
| xref::class/Instructions.adoc[`Instructions`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.Instructions,&#10548;>>
--
////


//[discrete]
[#IntermittentResourceEligibility]
=== `IntermittentResourceEligibility`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.IntermittentResourceEligibility`
| Cardinality
| 0..*
| Type
| xref::class/IntermittentResourceEligibility.adoc[`IntermittentResourceEligibility`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.IntermittentResourceEligibility,&#10548;>>
--
////


//[discrete]
[#InterTie]
=== `InterTie`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.InterTie`
| Cardinality
| 0..*
| Type
| xref::class/SchedulingPoint.adoc[`SchedulingPoint`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.InterTie,&#10548;>>
--
////


//[discrete]
[#isAggregatedRes]
=== `isAggregatedRes`
+++A flag to indicate if a resource is an aggregated resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.isAggregatedRes`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.isAggregatedRes,&#10548;>>
--
////


//[discrete]
[#lastModified]
=== `lastModified`
+++Indication of the last time this item was modified/versioned.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.lastModified`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.lastModified,&#10548;>>
--
////


//[discrete]
[#LMPMFlag]
=== `LMPMFlag`
+++LMPM flag: indicates whether the resource is subject to the LMPM test (Yes/No).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.LMPMFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.LMPMFlag,&#10548;>>
--
////


//[discrete]
[#LoadFollowingInst]
=== `LoadFollowingInst`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.LoadFollowingInst`
| Cardinality
| 0..*
| Type
| xref::class/LoadFollowingInst.adoc[`LoadFollowingInst`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.LoadFollowingInst,&#10548;>>
--
////


//[discrete]
[#LoadFollowingOperatorInput]
=== `LoadFollowingOperatorInput`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.LoadFollowingOperatorInput`
| Cardinality
| 0..*
| Type
| xref::class/LoadFollowingOperatorInput.adoc[`LoadFollowingOperatorInput`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.LoadFollowingOperatorInput,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#MarketObjectStatus]
=== `MarketObjectStatus`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.MarketObjectStatus`
| Cardinality
| 0..*
| Type
| xref::class/MarketObjectStatus.adoc[`MarketObjectStatus`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.MarketObjectStatus,&#10548;>>
--
////


//[discrete]
[#MarketParticipant]
=== `MarketParticipant`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.MarketParticipant`
| Cardinality
| 0..1
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.MarketParticipant,&#10548;>>
--
////


//[discrete]
[#marketParticipationFlag]
=== `marketParticipationFlag`
+++Market Participation flag: indicates whether the resource participate in the market.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.marketParticipationFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.marketParticipationFlag,&#10548;>>
--
////


//[discrete]
[#maxBaseSelfSchedQty ]
=== `maxBaseSelfSchedQty `
+++Maximum base self schedule quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.maxBaseSelfSchedQty%20`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.maxBaseSelfSchedQty ,&#10548;>>
--
////


//[discrete]
[#maxOnTime]
=== `maxOnTime`
+++Maximum on time after start up.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.maxOnTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.maxOnTime,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#minDispatchTime]
=== `minDispatchTime`
+++Minimum number of consecutive hours a resource shall be dispatched if bid is accepted.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.minDispatchTime`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.minDispatchTime,&#10548;>>
--
////


//[discrete]
[#minOffTime]
=== `minOffTime`
+++Minimum off time after shut down.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.minOffTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.minOffTime,&#10548;>>
--
////


//[discrete]
[#minOnTime]
=== `minOnTime`
+++Minimum on time after start up.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.minOnTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.minOnTime,&#10548;>>
--
////


//[discrete]
[#MktConnectivityNode]
=== `MktConnectivityNode`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.MktConnectivityNode`
| Cardinality
| 0..1
| Type
| xref::class/MktConnectivityNode.adoc[`MktConnectivityNode`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.MktConnectivityNode,&#10548;>>
--
////


//[discrete]
[#MPMResourceStatus]
=== `MPMResourceStatus`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.MPMResourceStatus`
| Cardinality
| 0..*
| Type
| xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.MPMResourceStatus,&#10548;>>
--
////


//[discrete]
[#MPMTestThreshold]
=== `MPMTestThreshold`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.MPMTestThreshold`
| Cardinality
| 0..*
| Type
| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.MPMTestThreshold,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mustOfferFlag]
=== `mustOfferFlag`
+++Must offer flag: indicates whether the unit is subject to the must offer provisions (Y/N).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.mustOfferFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.mustOfferFlag,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#nonMarket]
=== `nonMarket`
+++Flag to indicate that the Resource is not participating in the Market Operations.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.nonMarket`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.nonMarket,&#10548;>>
--
////


//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperatingShare,&#10548;>>
--
////


//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperationalTags,&#10548;>>
--
////


//[discrete]
[#OrgResOwnership]
=== `OrgResOwnership`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.OrgResOwnership`
| Cardinality
| 0..*
| Type
| xref::class/OrgResOwnership.adoc[`OrgResOwnership`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.OrgResOwnership,&#10548;>>
--
////


//[discrete]
[#Pnode]
=== `Pnode`
+++A registered resource injects power at one or more connectivity nodes related to a pnode+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.Pnode`
| Cardinality
| 0..1
| Type
| xref::class/Pnode.adoc[`Pnode`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.Pnode,&#10548;>>
--
////


//[discrete]
[#pointOfDeliveryFlag]
=== `pointOfDeliveryFlag`
+++Indication that the registered resource is a Point of Delivery (YES) resource which implies there is a POD Loss Factor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.pointOfDeliveryFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.pointOfDeliveryFlag,&#10548;>>
--
////


//[discrete]
[#priceSetFlagDA]
=== `priceSetFlagDA`
+++Price setting flag: indicates whether a resource is capable of setting the Market Clearing Price (Y) for the DA market, and if not, indicates whether the resource shall submit bids for energy at $ 0 (S) or not (N).

Initially in the RegisteredGenerator class. It was moved to the RegisteredResource class for the participating load dispatch purpose.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.priceSetFlagDA`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.priceSetFlagDA,&#10548;>>
--
////


//[discrete]
[#priceSetFlagRT]
=== `priceSetFlagRT`
+++Price setting flag: indicates whether a resource is capable of setting the Market Clearing Price (Y) for the RT market, and if not, indicates whether the resource shall submit bids for energy at $ 0 (S) or not (N).

Initially in the RegisteredGenerator class. It was moved to the RegisteredResource class for the participating load dispatch purpose.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.priceSetFlagRT`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.priceSetFlagRT,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSREvents,&#10548;>>
--
////


//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSRType,&#10548;>>
--
////


//[discrete]
[#RampRateCurve]
=== `RampRateCurve`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.RampRateCurve`
| Cardinality
| 0..*
| Type
| xref::class/RampRateCurve.adoc[`RampRateCurve`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.RampRateCurve,&#10548;>>
--
////


//[discrete]
[#Reason]
=== `Reason`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.Reason`
| Cardinality
| 0..*
| Type
| xref::class/Reason.adoc[`Reason`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.Reason,&#10548;>>
--
////


//[discrete]
[#registrationStatus]
=== `registrationStatus`
+++Registration Status of resource - Active, Mothballed, Planned, or Decommissioned.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.registrationStatus`
| Cardinality
| 0..1
| Type
| xref::enumeration/ResourceRegistrationStatus.adoc[`ResourceRegistrationStatus`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.registrationStatus,&#10548;>>
--
////


//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ReportingGroup,&#10548;>>
--
////


//[discrete]
[#resourceAdequacyFlag]
=== `resourceAdequacyFlag`
+++Indication that this resource participates in the resource adequacy function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.resourceAdequacyFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.resourceAdequacyFlag,&#10548;>>
--
////


//[discrete]
[#ResourceAncillaryServiceQualification]
=== `ResourceAncillaryServiceQualification`
+++RegisteredResources are qualified for resource ancillary service types (which include market product types as well as other types such as BlackStart) by the association to the class ResourceAncillaryServiceQualification.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceAncillaryServiceQualification`
| Cardinality
| 0..*
| Type
| xref::class/ResourceCertification.adoc[`ResourceCertification`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceAncillaryServiceQualification,&#10548;>>
--
////


//[discrete]
[#ResourceAwardInstruction]
=== `ResourceAwardInstruction`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceAwardInstruction`
| Cardinality
| 0..*
| Type
| xref::class/ResourceAwardInstruction.adoc[`ResourceAwardInstruction`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceAwardInstruction,&#10548;>>
--
////


//[discrete]
[#ResourceCapacity]
=== `ResourceCapacity`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceCapacity`
| Cardinality
| 0..*
| Type
| xref::class/ResourceCapacity.adoc[`ResourceCapacity`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceCapacity,&#10548;>>
--
////


//[discrete]
[#ResourceCertification]
=== `ResourceCertification`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceCertification`
| Cardinality
| 0..*
| Type
| xref::class/ResourceCertification.adoc[`ResourceCertification`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceCertification,&#10548;>>
--
////


//[discrete]
[#ResourceDispatchResults]
=== `ResourceDispatchResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceDispatchResults`
| Cardinality
| 0..*
| Type
| xref::class/ResourceDispatchResults.adoc[`ResourceDispatchResults`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceDispatchResults,&#10548;>>
--
////


//[discrete]
[#ResourceGroups]
=== `ResourceGroups`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceGroups`
| Cardinality
| 0..*
| Type
| xref::class/ResourceGroup.adoc[`ResourceGroup`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceGroups,&#10548;>>
--
////


//[discrete]
[#ResourceLoadFollowingInst]
=== `ResourceLoadFollowingInst`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceLoadFollowingInst`
| Cardinality
| 0..*
| Type
| xref::class/ResourceLoadFollowingInst.adoc[`ResourceLoadFollowingInst`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceLoadFollowingInst,&#10548;>>
--
////


//[discrete]
[#ResourcePerformanceRatings]
=== `ResourcePerformanceRatings`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredDistributedResource.ResourcePerformanceRatings`
| Cardinality
| 0..*
| Type
| xref::class/ResourcePerformanceRating.adoc[`ResourcePerformanceRating`]


|===

////
[.text-left]
--
<<slots_table.ResourcePerformanceRatings,&#10548;>>
--
////


//[discrete]
[#ResourceVerifiableCosts]
=== `ResourceVerifiableCosts`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.ResourceVerifiableCosts`
| Cardinality
| 0..1
| Type
| xref::class/ResourceVerifiableCosts.adoc[`ResourceVerifiableCosts`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.ResourceVerifiableCosts,&#10548;>>
--
////


//[discrete]
[#ResponseMethods]
=== `ResponseMethods`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredDistributedResource.ResponseMethods`
| Cardinality
| 0..*
| Type
| xref::class/ResponseMethod.adoc[`ResponseMethod`]


|===

////
[.text-left]
--
<<slots_table.ResponseMethods,&#10548;>>
--
////


//[discrete]
[#RMROperatorInput]
=== `RMROperatorInput`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.RMROperatorInput`
| Cardinality
| 0..*
| Type
| xref::class/RMROperatorInput.adoc[`RMROperatorInput`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.RMROperatorInput,&#10548;>>
--
////


//[discrete]
[#RUCAwardInstruction]
=== `RUCAwardInstruction`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.RUCAwardInstruction`
| Cardinality
| 0..*
| Type
| xref::class/RUCAwardInstruction.adoc[`RUCAwardInstruction`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.RUCAwardInstruction,&#10548;>>
--
////


//[discrete]
[#SMPMFlag]
=== `SMPMFlag`
+++SMPM flag: indicates whether the resource is subject to the SMPM test (Yes/No).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.SMPMFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.SMPMFlag,&#10548;>>
--
////


//[discrete]
[#SubControlArea]
=== `SubControlArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.SubControlArea`
| Cardinality
| 0..*
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.SubControlArea,&#10548;>>
--
////


//[discrete]
[#SubstitutionResourceList]
=== `SubstitutionResourceList`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.SubstitutionResourceList`
| Cardinality
| 0..*
| Type
| xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.SubstitutionResourceList,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TimeSeries]
=== `TimeSeries`



[cols="h,4",width=65%]
|===
| URI
| `cim:RegisteredResource.TimeSeries`
| Cardinality
| 0..*
| Type
| xref::class/TimeSeries.adoc[`TimeSeries`]

| Inherited from
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.TimeSeries,&#10548;>>
--
////


//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.VerificationAction,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ResourcePerformanceRating.adoc[`ResourcePerformanceRating`] | xref::class/ResourcePerformanceRating.adoc#RegisteredResource[`RegisteredResource`]



| xref::class/ResponseMethod.adoc[`ResponseMethod`] | xref::class/ResponseMethod.adoc#RegisteredResource[`RegisteredResource`]


|===

